# tiralabra-harjoitustyo

./: .coveragerc  .pylintrc  README.md  pyproject.toml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: mazegen.py
src/tests/: maze_test.py  mazegen_test.py
