[tool.poetry]
name = "tiralabra-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Ilari Matikainen <ilari.matikainen@rokki.net>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
