[tool.poetry]
name = "tiralabra-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Ilari Matikainen <ilari.matikainen@rokki.net>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
pylint = "^2.13.0"
pygame = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
